infra/k8s/workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qcai-ingestion-worker
  namespace: qcai-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qcai-ingestion-worker
  template:
    metadata:
      labels:
        app: qcai-ingestion-worker
    spec:
      containers:
        - name: ingestion-worker
          image: us-central1-docker.pkg.dev/naylinnaung/qcai-repo/qcai-api:latest
          command: ["python", "-m", "app.workers.ingestion"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qcai-rag-worker
  namespace: qcai-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qcai-rag-worker
  template:
    metadata:
      labels:
        app: qcai-rag-worker
    spec:
      containers:
        - name: rag-worker
          image: us-central1-docker.pkg.dev/naylinnaung/qcai-repo/qcai-api:latest
          command: ["python", "-m", "app.workers.rag"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qcai-analytics-worker
  namespace: qcai-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qcai-analytics-worker
  template:
    metadata:
      labels:
        app: qcai-analytics-worker
    spec:
      containers:
        - name: analytics-worker
          image: us-central1-docker.pkg.dev/naylinnaung/qcai-repo/qcai-api:latest
          command: ["python", "-m", "app.workers.analytics"]
